# Scripter

./: .gitignore  CMakeLists.txt  build.bat  readSerial.ps1  run.bat  test.py
client/: spec.txt
client/appSocket/: index.html  package-lock.json  package.json
client/appSocket/src/: App.jsx
client/appSocket/src/assets/Arduino/jsons/: Arduino.json  Battery9v.json  L293D.json
client/appSocket/src/components/ArduinoEmulator/: ArduinoEmulator.jsx
client/appSocket/src/components/ArduinoEmulator/ComponentPane/: ComponentPane.css  ComponentPane.jsx  backup.jsx
client/appSocket/src/components/ArduinoEmulator/Simulation/: Simulation.jsx
client/appSocket/src/components/ArduinoEmulator/Workspace/: Workspace2.css  Workspace2.jsx  backup.jsx  bacup2.jsx
client/appSocket/src/components/CodeUploader/: CodeUploader.css  CodeUploader.jsx  PopupWindow.css  PopupWindow.jsx  UpperInput.css  UpperInput.jsx
client/appSocket/src/components/CodeUploader/BaudRate/: BaudSelector.css  BaudSelector.jsx
client/appSocket/src/components/CodeUploader/Boards/: BoardSelector.css  BoardSelector.jsx
client/appSocket/src/components/MainPage/: Main.css  Main.jsx
client/appSocket/src/components/Modeller/: Modeller.css  Modeller.jsx
include/: common.h  exec.h  file_handler.h  request.h  ws_server.h
src/: exec.cpp  file_handler.cpp  request.cpp  ws_server.cpp
sys/: scripter.reg
test/: main.cpp  test.cpp
vendors/: deps.txt
vendors/trapidjson/: Makefile  cmake_install.cmake
vendors/trapidjson/websocketpp/: Makefile  cmake_install.cmake
(+29 files in other folders)
